--- a/name/main.tex
+++ b/name/main.tex
@@ -163,21 +163,22 @@
 
 \begin{abstract}
 We describe the annual-mean structure and transport budget of the Southern Australia Current System along Australia's southern coast, and the coupling between currents in the system. The system contains the shallow eastward Shelf Break Currents (SBC), a series of currents along the shelf break consisting of the Leeuwin Current Extension, the South Australian Current and the Zeehan Current; and the counter-flowing westward Flinders Current (FC) found both offshore of, and underneath, the SBC\@.
-We use a climatological hydrography gridded at high resolution and a high resolution oceanic general circulation model simulation forced by an atmospheric climatology.
+In this work, we use a climatological hydrography gridded at high resolution and a high resolution oceanic general circulation model simulation forced by an atmospheric climatology.
 
-The westward FC has an annual-mean speed up to \SI{10}{\centi\meter\per\second} and a dual structure with (1) the slope FC, a small slope-trapped part near 600m depth, which is an undercurrent to the SBC; and (2) the offshore FC, a large, deep-reaching, surface-intensified part located offshore of the SBC\@.
-The annual-mean FC originates south of Tasmania and loses \SI{11}{Sv} to the Tasman Leakage westward outflow as the FC flows to the west around Tasmania. The FC then increases again due to a net \SI{11.8}{Sv} gain from onshore flows across the South Australian Basin. The FC is strongest at Cape Leeuwin, the southwestern limit of Australia, with a \SI{12.3}{Sv} westward transport. 
-Nearly 80\% of the intensification of the FC due to onshore flows occurs where the coastline, and currents, are largely zonal.
-To the south of the offshore FC, a curious deep-reaching eastward jet is also found.
+The westward FC has an annual-mean speed up to \SI{10}{\centi\meter\per\second} and a dual structure with (1) the slope-FC, a small slope-trapped part near 600m depth, which is an undercurrent to the SBC; and (2) the offshore-FC, a large, deep-reaching, surface-intensified part located offshore of the SBC\@.
+Where the continental shelf is slanted (east of \ang{132}E), the annual-mean FC is a weak westward flow disconnected from the Tasman Leakage, which is a westward outflow south of Tasmania transporting \SI{11}{Sv} offshore.
+The FC is fed by onshore flows across the South Australian Basin, where nearly 80\% of these flows occur where the continental shelf is zonal (west of \ang{132}E), resulting in strongest annual-mean FC transport of \SI{12.3}{Sv} at Cape Leeuwin, the southwestern limit of Australia.
+To the south of the FC, an unreported deep-reaching eastward jet may be an expression of the Albany High's southern branch and a source water for the FC.
 
-The eastward SBC are continuous flows with annual-mean speed up to \SI{20}{\centi\meter\per\second} located in the upper \SI{250}{\meter}. A strong annual-mean downwelling occurs from the SBC into the slope FC where the slope is steep. The downwelling may be important in maintaining the slope FC\@.
-The annual-mean Leeuwin Current Extension transport decreases from \SI{1.1}{Sv} as it rounds Cape Leeuwin to only \SI{0.1}{Sv} at the western edge of the Great Australian Bight due to strong downwelling and lateral export. 
-The South Australian Current transport across the Bight is steady at around \SI{0.1}{Sv} in the region where the coastline is zonal (west of \ang{132}E) and increases to \SI{0.3}{Sv} east of this location where the coastline becomes slanted.
-In the Zeehan Current, stronger onshore flows are compensated by a stronger downwelling and a shallow coastal current that exports water into Bass Strait, resulting in a Zeehan Current transport of \SI{0.4}{Sv}.
+The eastward SBC are continuous flows with annual-mean speed up to \SI{20}{\centi\meter\per\second} located in the upper \SI{250}{\meter}. A strong annual-mean downwelling occurs from the SBC into the slope FC where the slope is steep and may be important in maintaining the slope FC\@.
+The annual-mean Leeuwin Current Extension transport decreases from \SI{1.1}{Sv} as it rounds Cape Leeuwin to \SI{0.1}{Sv} at the western edge of the Great Australian Bight due to strong downwelling and offshore exports near Cape Leeuwin. 
+East of Cape Leeuwin and along the zonal shelf, the South Australian Current transport is steady due to onshore flows balanced out by downwelling exports. Along the slanted shelf, the onshore flows are stronger than downwelling exports and result in an increasing transport for the South Australian Current and Zeehan Current up to \SI{0.4}{Sv} eastward south of Tasmania.
 
-We find that the SBC and offshore FC are coupled through onshore Ekman drift and that the SBC and slope FC are coupled through downwelling. 
-The combined effect of the SBC--offshore-FC horizontal pair and SBC--slope-FC vertical pair is a conversion of a widespread northward Ekman drift into downwelling with little impact on the eastward transport of the SBC. In contrast, the onshore flows feeding into the FC are largely converted into increasing westward transport of the FC\@.
-The annual-mean circulation bears a remarkable similarity to the annual-mean zonal overturning circulation in the Leeuwin Current System off Western Australia. An overview of the system's seasonality shows the strength of the SBC and FC vary in opposite phase: the SBC are weaker and partly reversed (to westward) in summer and the FC is weaker and partly reversed (to eastward) in autumn. The system's seasonality warrants further research.
+We find that the SBC and offshore-FC are coupled through onshore Ekman transport and that the SBC and slope-FC are coupled through downwelling. 
+The combined effect of the SBC--offshore-FC horizontal pair and SBC--slope-FC vertical pair is a conversion of widespread northward Ekman transport into downwelling with little impact on the eastward transport of the SBC. In contrast, the onshore flows feeding into the FC are largely converted into increasing westward transport of the FC\@.
+Even though the Leeuwin Current System off western Australia and the Southern Australia Current System are fed by different onshore transports, namely a pressure gradient-driven geostrophic transport off western Australia and a wind-driven Ekman transport off southern Australia, the annual-mean circulation of the two systems are remarkably similar.
+
+An overview of the system's seasonality shows the strength of the SBC and FC vary in opposite phase: the SBC are weaker and partly reversed (to westward) in summer when the winds are upwelling favourable and the FC is weaker and partly reversed (to eastward) in autumn when the winds are downwelling favourable. In contrast, the Leeuwin Current System persists annually. The balance mechanism driving the seasonal opposition in the SBC's and FC's strength is unknown and warrants further research.
 \end{abstract}
 
 \begin{keyword}
