--- a/name/main.tex
+++ b/name/main.tex
@@ -191,21 +191,27 @@ Southern Australia Current System \sep Shelf break currents \sep Flinders Curren
 
 \section{Introduction} \label{Introduction}
 \subsection{Australia's Northern Boundary Currents} \label{Australia's Northern Boundary Currents}
-The southern continental margin of Australia hosts a unique northern boundary circulation which transports waters between Cape Leeuwin, the southwest corner of mainland Australia, and South East Cape, the southern tip of Tasmania (Fig.\,\ref{f01_fig1_}). Other major boundary currents typically transport water meridionally. The Leeuwin Current flows southward along the west coast of Australia and joins the south Australian shelf break currents to form a \SI{5500}{km}-long boundary current starting from North West Cape (\ang{21.8}S) off Western Australia to South East Cape, Tasmania (\ang{43.6}S). These surface currents represent the longest boundary circulation in the world \citep{Middleton2007,Ridgway2004}.
+The southern continental margin of Australia hosts a unique northern boundary circulation which transports waters between Cape Leeuwin, the southwest corner of Australia, and South East Cape, the southern tip of Tasmania (Fig.\,\ref{f01_fig1_}). Other major boundary currents typically transport water meridionally. The Leeuwin Current flows southward along western Australia and joins the eastward-flowing shelf break currents along southern Australia to form a \SI{5500}{km}-long boundary current starting from North West Cape (\ang{21.8}S) off western Australia to South East Cape, Tasmania (\ang{43.6}S). These surface currents represent the longest boundary circulation in the world \citep{Middleton2007,Ridgway2004}.
 %
 \begin{figure}[h]
 \noindent\includegraphics[width=1\textwidth, height=0.89\textheight, keepaspectratio]
 {f01_fig1_.png}
 \caption{\label{f01_fig1_}%
-  Southern Australian bathymetry (shadings, the colour increment changes from 10 $m$ to 400 $m$ at $200\ m$) from Smith and Sandwell (1997) bin averaged onto the CARS grid, important landforms and locations (indicated by small gray arrows), major currents or flows (larger coloured arrow) and location of cross-sections for latitude versus depth plots (white dashed lines). LCE (red arrow): Leeuwin Current Extension. SAC (red arrow): South Australian Current. ZC (red arrow): Zeehan Current. FC (cyan arrow): Flinders Current. TL (cyan arrow): Tasman Leakage. OF (orange arrows): onshore flows. CC (black arrows): coastal currents.}
+  Southern Australian bathymetry (shadings, the colour increment changes from 10 $m$ to 400 $m$ at $200\ m$) from Smith and Sandwell (1997) bin averaged onto the CARS grid, important land forms and locations (indicated by small gray arrows), major currents or flows (larger coloured arrow) and location of cross-sections for latitude versus depth plots (white dashed lines). LCE (red arrow): Leeuwin Current Extension. SAC (red arrow): South Australian Current. ZC (red arrow): Zeehan Current. FC (cyan arrow): Flinders Current. TL (cyan arrow): Tasman Leakage. OF (orange arrows): onshore flows. CC (black arrows): coastal currents.}
 \end{figure}
 
-\citet{Ridgway2004} proposed a naming convention for the surface circulation over the shelf break: (1) South of Australia, the poleward Leeuwin Current pivots anticlockwise around Cape Leeuwin (\ang{115}E) then continues eastward until Cape Pasley (\ang{124}E), the western edge of the Great Australian Bight, and is often referred to as the Leeuwin Current Extension (\citeauthor{Ridgway2004} \citeyear{Ridgway2004}, \citeauthor{Batteen2007} \citeyear{Batteen2007}); (2) The South Australian Current emerges within the Great Australian Bight and flows over the shelf break eastward then south-eastward out of the Bight, past the shallow Spencer and St.\,Vincent Gulfs, and as far south as Portland (\ang{141}E); (3) The Zeehan Current forms west of the Bass Strait, flows poleward along the western Tasmanian shelf and tips eastward around South East Cape (\ang{147}E). 
-\citet{Middleton2002} described the slope circulation underneath and south of these shelf break currents. The Flinders Current flows westward from South East Cape to Cape Leeuwin. The Flinders Current has a larger width and depth range and flows in the opposite direction to the shelf break currents.
+\citet{Ridgway2004} proposed the following naming convention for the surface circulation over the southern Australian shelf break. 
+The Leeuwin Current Extension is the eastward continuation of the poleward Leeuwin Current which pivots anticlockwise around Cape Leeuwin (\ang{115}E) and continues eastward until Cape Pasley (\ang{124}E), the western edge of the Great Australian Bight (\citeauthor{Ridgway2004} \citeyear{Ridgway2004}, \citeauthor{Batteen2007} \citeyear{Batteen2007}). 
+The South Australian Current emerges within the Great Australian Bight and flows over the shelf break eastward then south-eastward out of the Bight, past the shallow Spencer and St.\,Vincent Gulfs, and as far south as Portland (\ang{141}E).
+The Zeehan Current forms west of the Bass Strait, flows poleward along the western Tasmanian shelf and tips eastward around South East Cape (\ang{147}E, \citeauthor{Oliver2018b} \citeyear{Oliver2018b}).
+This series of currents together form a continuous surface flow that we call here the Shelf Break Currents (SBC).
+\citet{Middleton2002} described the slope circulation underneath and south of the SBC. The Flinders Current (FC) flows westward from western Tasmania to Cape Leeuwin. This current has a larger width and depth range and flows in the opposite direction to the SBC.
 
-The topography of the continental margin displays varying steepness (Fig.\,\ref{f01_fig1_}). Changes in steepness mainly occur across the Great Australian Bight, delimited by Cape Pasley and Cape Carnot. Inside the Great Australian Bight, the shallow shelf is wider and the continental slope is less steep, especially on the eastern side of the Bight where isobaths between \SI{200}{\meter} and \SI{2000}{\meter} are widely spaced. The open, shallow shelf in the Bass Strait provides a connection between the South Australian Basin and the Tasman Sea. These shallow shelf regions provide a wide platform for shallow coastal currents to exist and interact with the shelf break currents. Outside these regions, the continental margin is characterised by a narrow shelf and steep slope giving a sharp shelf break. 
+The topography of the continental margin displays varying steepness (Fig.\,\ref{f01_fig1_}), which has implications for boundary current structure.
+For example, at the shelf break, steep topography may reduce ocean-shelf exchange \citep{Huthnance1995} but produce a more coherent alongshore current \citep{Pennel2012}.
+Here, changes in steepness mainly occur across the Great Australian Bight, delimited by Cape Pasley and Cape Carnot. Inside the Great Australian Bight, the shallow shelf is wider and the continental slope is less steep, especially on the eastern side of the Bight where isobaths between \SI{200}{\meter} and \SI{2000}{\meter} are widely spaced. The open, shallow shelf in the Bass Strait provides a connection between the South Australian Basin and the Tasman Sea. These shallow shelf regions provide a wide platform for shallow coastal currents to exist and interact with the shelf break currents. Outside these regions, the continental margin is characterised by a narrow shelf and steep slope giving a sharp shelf break. 
 
-The orientation of the margin shifts from zonal to slanted moving eastward along the coast. The Leeuwin Current Extension and the South Australian Current flow approximately zonally until the eastern Great Australian Bight near \ang{132}E. The South Australian Current then flows along a northwest-to-southeast slant and the Zeehan Current flows approximately meridionally before it tips around South East Cape. The Leeuwin Current Extension, the South Australian Current and the Zeehan Current together form a continuous surface flow that we call the Shelf Break Currents (SBC). We refer to the ``zonal sector'' of the SBC as the flow west of \ang{132}E where the shelf break is approximately zonal, and the ``slanted sector'' as the flow east of \ang{132}E. The westward flows offshore and beneath the SBC are referred to as the Flinders Current (FC).
+From west to east, the orientation of the margin also shifts from zonal to slanted along a northwest-to-southeast tilt. This has implications for current's trapping against the shelf. For example, \citet{Middleton2002} applies western boundary current theory at the northern boundary (i.e. zonal shelf) south of Australia to describe the FC. Along the slanted shelf however, eastern boundary current theory (e.g.  \citeauthor{McCreary1993}  \citeyear{McCreary1993}) may apply to describe the FC because the shelf is facing west. Here, the ``zonal sector'' includes the Leeuwin Current Extension and the South Australian Current's west half, which flow approximately zonally until the eastern Great Australian Bight near \ang{132}E. East of this, the ``slanted sector'' includes the South Australian Current's east half and the Zeehan Current, which flow south-eastward along a northwest-to-southeast slant.
 
 \subsection{The Shelf Break Currents} \label{The Shelf Break Currents}
 Evidence that the Leeuwin Current rounds Cape Leeuwin and continues eastward into the Great Australian Bight is widespread. These include observations of pelagic and demersal (living close to the floor) fauna of tropical origin being found in the Great Australian Bight \citep{Garrey1981}, satellite temperature observations \citep{Legeckis1981} and estimates of steric height along the eastern Indian Ocean \citep{Godfrey1985} indicating warm waters that follow the shelf break around Cape Leeuwin and continue eastward into the Bight. The warm and relatively high salinity Leeuwin Current Extension can reach speeds greater than \SI{1}{\meter\per\second} over the \SI{200}{\meter} isobath \citep{Cresswell1993} and has a mean speed of \SI{0.5}{\meter\per\second} down to \SI{250}{\meter} along the upper slope \citep{Cresswell2004}. The Leeuwin Current Extension is periodically weakened (enhanced) by large anticyclonic eddies (small cyclonic eddies) in the region between Cape Leeuwin and Albany, as shown from surface drifter track measurements \citep{Godfrey1986} and an eddy tracking study \citep{Cresswell2004}.
