--- a/name/main.tex
+++ b/name/main.tex
@@ -214,23 +214,19 @@ Here, changes in steepness mainly occur across the Great Australian Bight, delim
 From west to east, the orientation of the margin also shifts from zonal to slanted along a northwest-to-southeast tilt. This has implications for current's trapping against the shelf. For example, \citet{Middleton2002} applies western boundary current theory at the northern boundary (i.e. zonal shelf) south of Australia to describe the FC. Along the slanted shelf however, eastern boundary current theory (e.g.  \citeauthor{McCreary1993}  \citeyear{McCreary1993}) may apply to describe the FC because the shelf is facing west. Here, the ``zonal sector'' includes the Leeuwin Current Extension and the South Australian Current's west half, which flow approximately zonally until the eastern Great Australian Bight near \ang{132}E. East of this, the ``slanted sector'' includes the South Australian Current's east half and the Zeehan Current, which flow south-eastward along a northwest-to-southeast slant.
 
 \subsection{The Shelf Break Currents} \label{The Shelf Break Currents}
-Evidence that the Leeuwin Current rounds Cape Leeuwin and continues eastward into the Great Australian Bight is widespread. These include observations of pelagic and demersal (living close to the floor) fauna of tropical origin being found in the Great Australian Bight \citep{Garrey1981}, satellite temperature observations \citep{Legeckis1981} and estimates of steric height along the eastern Indian Ocean \citep{Godfrey1985} indicating warm waters that follow the shelf break around Cape Leeuwin and continue eastward into the Bight. The warm and relatively high salinity Leeuwin Current Extension can reach speeds greater than \SI{1}{\meter\per\second} over the \SI{200}{\meter} isobath \citep{Cresswell1993} and has a mean speed of \SI{0.5}{\meter\per\second} down to \SI{250}{\meter} along the upper slope \citep{Cresswell2004}. The Leeuwin Current Extension is periodically weakened (enhanced) by large anticyclonic eddies (small cyclonic eddies) in the region between Cape Leeuwin and Albany, as shown from surface drifter track measurements \citep{Godfrey1986} and an eddy tracking study \citep{Cresswell2004}.
+Evidence that the Leeuwin Current rounds Cape Leeuwin and continues eastward into the Great Australian Bight is widespread. These include observations of pelagic and demersal (living close to the floor) fauna of tropical origin being found in the Great Australian Bight \citep{Garrey1981}, satellite temperature observations \citep{Legeckis1981} and estimates of steric height along the eastern Indian Ocean \citep{Godfrey1985}. The warm and relatively high salinity Leeuwin Current Extension can reach speeds greater than \SI{100}{\centi\meter\per\second} over the \SI{200}{\meter} isobath \citep{Cresswell1993} and has a mean speed of \SI{50}{\centi\meter\per\second} down to \SI{250}{\meter} along the upper slope \citep{Cresswell2004}. The Leeuwin Current Extension is periodically weakened (enhanced) by large anticyclonic eddies (small cyclonic eddies) in the region between Cape Leeuwin and Albany, as shown from surface drifter track measurements \citep{Godfrey1986} and an eddy tracking study \citep{Cresswell2004}.
 
 The South Australian Current contains warm and very high salinity waters originating from the centre of the Great Australian Bight \citep{Rochford1986} and the Spencer and St.\,Vincent's Gulfs \citep{Godfrey1986} which flow south-eastward over the shelf break to the western Bass Strait \citep{Ridgway2004}. The South Australian Current can reach speeds of \SI{50}{\centi\meter\per\second} down to \SI{200}{\meter} along the shelf break \citep{Middleton2007}.
 
 The Zeehan Current is a poleward current found over the western shelf break of Bass Strait and the western and southern shelf breaks of Tasmania  \citep{Baines1983,Thompson1983}. It is a relatively warm and salty current, fed by the South Australian Current, with current speeds reaching \SI{40}{\centi\meter\per\second} down to \SI{300}{\meter} \citep{Ridgway2007}. Near the southern tip of Tasmania, the Zeehan Current meets the counter-flowing East Australian Current Extension, which flows poleward along the eastern shelf break of Tasmania and pivots westward towards South East Cape \citep{Cresswell2000,Oliver2016}.
 
 \subsection{The Deep-Ocean Circulation} \label{The Deep-Ocean Circulation}
-The FC is the northern branch of the south-eastern extension of the Indian Ocean subtropical gyre \citep{Hufford1997, McCartney2007}. The FC flows westward from south of Tasmania to the south-west corner of Australia and is found between the surface and \SI{2000}{\meter} \citep{Middleton2002}. The FC is located beneath the SBC along the continental slope and extends to the sea surface south of the SBC\@.
+The FC is the northern branch of the south-eastern extension of the Indian Ocean subtropical gyre \citep{Hufford1997, McCartney2007}. The FC emerges off western Tasmania, flows westward to the south-west corner of Australia and is found between the surface and \SI{2000}{\meter} \citep{Middleton2002}. The FC is located beneath the SBC along the continental slope and extends to the sea surface south of the SBC\@.
 Observational data show the FC strengthens and shoals east to west with a mean speed of \SI{4}{\centi\meter\per\second} near \SI{1000}{\meter} depth west of Tasmania, \num{3}--\SI{7}{\centi\meter\per\second} between \num{500} and \SI{900}{\meter} near Portland \citep{Middleton2007}, and \SI{20}{\centi\meter\per\second} between \num{400} and \SI{600}{\meter} near Albany \citep{Cresswell1993}.
 
-\citepos{Middleton2002} numerical experiments showed permanent positive wind-stress curl in the South Australian Basin leads to a regional northward barotropic Sverdrup transport that is deflected westward along the southern Australian margin. It is worth noting that the Sverdrup theory cannot explain the northwestward-flowing part of the FC along the slanted coast (\ang{132}E and \ang{146}E) and particularly west of Tasmania, because it is along an eastern boundary \citep{McCreary1981,McCreary1991} and would be eliminated by the offshore propagation of Rossby waves \citep{Anderson1975}. It is therefore likely that the slanted part of the FC (as opposed to the zonal FC from \ang{132}E to Cape Leeuwin) is maintained by another mechanism.
+\citepos{Middleton2002} numerical experiments showed permanent positive wind-stress curl in the South Australian Basin leads to a regional northward barotropic Sverdrup transport that is deflected westward along the southern Australian margin, resulting in the FC. We note that Sverdrup theory may not explain the northwestward-flowing part of the FC along the slanted coast (east of \ang{132}E), because it is along an eastern boundary \citep{McCreary1981,McCreary1991} and should be eliminated by the offshore propagation of Rossby waves \citep{Anderson1975}. It is therefore possible that the slanted part of the FC (west of \ang{132}E) is maintained by another mechanism.
 
-In addition to the broad, northward Sverdrup flow, the FC is fed by narrower inflows. \citepos{McCartney2007} transport field derived from hydrographic and direct-velocity measurements show a transport starting to feed into the FC near the St.\,Vincent and Spencer Gulfs via two streamlines south of the FC that originate from the Antarctic Circumpolar Current. The eastward streamlines turn anti-clockwise south of the Great Australian Bight and accelerate the FC westward\@.
-
-The anticlockwise circulation is likely linked to the large eddy variability west of the Great Australian Bight which was measured in a number of observational studies \citep{Cresswell1993,Godfrey1986,Ridgway2004}. A sea-surface height summer average \citep{Middleton2003} revealed the "Albany High" \citep{Middleton2007}, a large quasi-stationary anti-cyclonic eddy centred off Albany. \citepos{McCartney2007} work coincides well
-with \citepos{Middleton2007} study, where the FC is the northern westward-flowing arm of the Albany High and the eastward-flowing streamlines are the southern eastward arm of the Albany High. We define the onshore flows
-feeding into the FC to include both the large-scale Sverdrup flow and recirculating flow from the Albany High.
+In addition to the broad, northward Sverdrup flow, the FC may be fed by recirculating flows in the South Australian Basin. A sea-surface height summer average \citep{Middleton2003} revealed the "Albany High" \citep{Middleton2007}, a large quasi-stationary anti-cyclonic eddy centred off Albany. Here, the FC is the northern westward-flowing arm of the Albany High. The southern eastward-flowing arm coincides with a transport field estimate using hydrographic and direct-velocity measurements from \citet{McCartney2007}.
 
 A further potential source of water to the FC is the Tasman Leakage, which carries water from the Pacific Ocean around south of Tasmania (Fig.\,\ref{f01_fig1_}). The FC is often referred to as an extension of the Tasman Leakage because part of it flows northwestward and then westward along the coast \citep{Feng2016,Middleton2002,Rosell-Fieschi2013} although most of the Tasman Leakage flows westward away from the shelf into the interior of the South Australian Basin \citep{Speich2002,vanSebille2012,vanSebille2014}.
 
@@ -240,13 +236,13 @@ Yet, the currents are known only from drift tracking measurements \citep{Godfrey
 
 In this study we consider the SBC and the FC as a system of currents and provide a complete description of their transport and the exchanges between them, following \citepos{Furue2017} methodology that was applied to the Leeuwin Current System along western Australia. The approach we take is to
 \begin{itemize}
-   \item examine the climatological, long-term mean, three-dimensional structure of the currents reconstructed from both a high-resolution gridded hydrography and an eddy-resolving ocean general circulation model forced by a seasonally-varying atmospheric climatology
-   \item determine the annual-mean transport of the SBC and the FC as they travel zonally along the south coast of Australia, and the lateral transports feeding into the SBC and into the FC, and the vertical transport exchanges between the SBC and FC
+   \item examine the long-term mean, three-dimensional structure of the currents reconstructed from both a high-resolution gridded hydrography and an eddy-resolving ocean general circulation model forced by an atmospheric climatology;
+   \item determine the annual-mean transport of the SBC and the FC as they travel zonally along the south coast of Australia, the lateral transports feeding into the SBC and into the FC, and the vertical transport exchanges between the SBC and FC;
    \item examine the coupling between the SBC and the FC in the annual-mean and present an overview of the currents' seasonality.
 \end{itemize}
 Here, we propose that the circulation in the southern Australian domain, comprising the SBC, the FC, the coastal currents (over the shallow shelf) and the onshore flows (from the ocean interior), be known as the Southern Australia Current System.
 
-The next section provides a description of the datasets (Section~\ref{Datasets}), the derivation of mass-conserving geostrophic velocities (Section~\ref{Geostrophic velocity derivation}), the volume definition of the SBC and FC (Section~\ref{SBC and FC definition}), and the derivation of a Southern Australia Current System transport budget (Section~\ref{Transport budget derivation}). Section~\ref{Results and Discussion} presents the results where the structure of the system is described in Section~\ref{Southern Australia Current System Structure}, the transport budget of the system is described in Section~\ref{Southern Australia Current System Transport Budget} and the coupling between the SBC and the FC is described in Section~\ref{SBC and FC coupling}. Finally, Section~\ref{Summary} summarizes the analysis and presents a closing discussion in Section~\ref{Closing discussion}.
+The next section provides a description of the datasets (Section~\ref{Datasets}), the derivation of mass-conserving geostrophic velocities (Section~\ref{Geostrophic velocity derivation}), the volume definition of the SBC and FC (Section~\ref{SBC and FC definition}), and the derivation of a Southern Australia Current System transport budget (Section~\ref{Transport budget derivation}). Section~\ref{Results and Discussion} presents the results where the structure of the system is described in Section~\ref{Southern Australia Current System Structure} and the transport budget of the system is described in Section~\ref{Southern Australia Current System Transport Budget}. Finally, Section~\ref{Summary} summarizes the analysis and presents a closing discussion on the coupling and seasonality of the SBC and FC in Section~\ref{Closing discussion}.
 
 \section{Methodology} \label{Methodology}
 \subsection{Datasets} \label{Datasets}
