--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,50 @@
 
+@article{McClatchie2006,
+	title = {Water mass analysis and alongshore variation in upwelling intensity in the eastern {Great} {Australian} {Bight}},
+	volume = {111},
+	issn = {0148-0227},
+	url = {http://doi.wiley.com/10.1029/2004JC002699},
+	doi = {10.1029/2004JC002699},
+	language = {en},
+	number = {C8},
+	urldate = {2019-11-25},
+	journal = {Journal of Geophysical Research},
+	author = {McClatchie, Sam and Middleton, John F. and Ward, Tim M.},
+	year = {2006},
+	pages = {C08007}
+}
+
+@article{Cetina-Heredia2018,
+	title = {Nitrate {Sources}, {Supply}, and {Phytoplankton} {Growth} in the {Great} {Australian} {Bight}: {An} {Eulerian}-{Lagrangian} {Modeling} {Approach}},
+	volume = {123},
+	issn = {21699275},
+	shorttitle = {Nitrate {Sources}, {Supply}, and {Phytoplankton} {Growth} in the {Great} {Australian} {Bight}},
+	url = {http://doi.wiley.com/10.1002/2017JC013542},
+	doi = {10.1002/2017JC013542},
+	language = {en},
+	number = {2},
+	urldate = {2019-11-25},
+	journal = {Journal of Geophysical Research: Oceans},
+	author = {Cetina-Heredia, Paulina and van Sebille, Erik and Matear, Richard J. and Roughan, Moninya},
+	month = feb,
+	year = {2018},
+	pages = {759--772}
+}
+
+@article{YitSenBull2016,
+	title = {Sources, fate, and pathways of {Leeuwin} {Current} water in the {Indian} {Ocean} and {Great} {Australian} {Bight}: {A} {Lagrangian} study in an eddy-resolving ocean model},
+	volume = {121},
+	url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1002/2015JC011486},
+	doi = {10.1002/2015JC011486},
+	abstract = {Abstract The Leeuwin Current is the dominant circulation feature in the eastern Indian Ocean, transporting tropical and subtropical water southward. While it is known that the Leeuwin Current draws its water from a multitude of sources, existing Indian Ocean circulation schematics have never quantified the fluxes of tropical and subtropical source water flowing into the Leeuwin Current. This paper uses virtual Lagrangian particles to quantify the transport of these sources along the Leeuwin Current's mean pathway. Here the pathways and exchange of Leeuwin Current source waters across six coastally bound sectors on the south-west Australian coast are analyzed. This constitutes the first quantitative assessment of Leeuwin Current pathways within an offline, 50 year integration time, eddy-resolving global ocean model simulation. Along the Leeuwin Current's pathway, we find a mean poleward transport of 3.7 Sv in which the tropical sources account for 60–78\% of the transport. While the net transport is small, we see large transports flowing in and out of all the offshore boundaries of the Leeuwin Current sectors. Along the Leeuwin Current's pathway, we find that water from the Indonesian Throughflow contributes 50–66\% of the seasonal signal. By applying conditions on the routes particles take entering the Leeuwin Current, we find particles are more likely to travel offshore north of 30°S, while south of 30°S, particles are more likely to continue downstream. We find a 0.2 Sv pathway of water from the Leeuwin Current's source regions, flowing through the entire Leeuwin Current pathway into the Great Australian Bight.},
+	number = {3},
+	journal = {Journal of Geophysical Research: Oceans},
+	author = {Yit Sen Bull, Christopher and van Sebille, Erik},
+	year = {2016},
+	keywords = {Great Australian Bight, Indian Ocean, Lagrangian pathways, TROPAC01, connectivity, ocean modeling},
+	pages = {1626--1639}
+}
+
 @article{Pennel2012,
 	title = {Shelf {Impact} on {Buoyant} {Coastal} {Current} {Instabilities}},
 	volume = {42},
@@ -1252,7 +1298,6 @@ tex.type: Book Section},
 	note = {tex.type: Journal Article},
 	pages = {1--10}
 }
-
 @article{Rintoul2001a,
 	title = {Baroclinic transport variability of the {Antarctic} {Circumpolar} {Current} south of {Australia} ({WOCE} repeat section {SR}3)},
 	volume = {106},
@@ -1305,6 +1350,7 @@ tex.type: Book Section},
 tex.type: Journal Article},
 	pages = {1357--1375}
 }
+
 @article{Ridgway2007a,
 	title = {Observational evidence for a {Southern} {Hemisphere} oceanic supergyre},
 	volume = {34},
@@ -2534,7 +2580,6 @@ tex.type: Aggregated Database},
 	note = {tex.type: Journal Article},
 	pages = {29--78}
 }
-
 @article{Hellmer2011,
 	title = {On the freshening of the northwestern {Weddell} {Sea} continental shelf},
 	volume = {7},
@@ -2586,6 +2631,7 @@ tex.type: Aggregated Database},
 	note = {tex.type: Journal Article},
 	pages = {257--274}
 }
+
 @article{Hansen2016,
 	title = {Ice melt, sea level rise and superstorms: evidence from paleoclimate data, climate modeling, and modern observations that 2 {A} degrees {C} global warming could be dangerous},
 	volume = {16},
@@ -3765,7 +3811,6 @@ tex.type: Journal Article},
 	year = {2016},
 	pages = {65--90}
 }
-
 @article{Farneti2015,
 	title = {An assessment of {Antarctic} {Circumpolar} {Current} and {Southern} {Ocean} meridional overturning circulation during 1958–2007 in a suite of interannual {CORE}-{II} simulations},
 	volume = {93},
@@ -3818,6 +3863,7 @@ tex.type: Journal Article},
 	author = {Duran, E.R. and Phillips, H. E. and Furue, R. and Spence, P. and Bindoff, N.L.},
 	year = {2019}
 }
+
 @article{Griffies2014,
 	title = {An assessment of global and regional sea level for years 1993–2007 in a suite of interannual {CORE}-{II} simulations},
 	volume = {78},
